# srv

./: .envrc  .ignore  env.sh  init.sh  package.json  pnpm-lock.yaml
.github/workflows/: dev.yml  docker.yml  mariadb.yml  nginx.yml
db/: init.sql
db/function/: hostId.sql
db/procedure/: splitMail.sql
db/table/: cronErr.sql  do.sql  host.sql  log.sql  uidHost.sql
dev/: env.sh  gen.coffee  mariadb.coffee  mariadb.yml  nginx.yml  oceanbase.coffee  oceanbase.yml  phpmyadmin.coffee  phpmyadmin.yml  redis.yml  up.sh
dev/conf/nginx/: nginx.conf
dev/conf/nginx/bak/conf/: 3ti.site.conf
dev/conf/nginx/bak/site/: 3ti.site.conf
dev/conf/nginx/conf/: 3ti.dev.conf  i18n.dev.conf
dev/conf/nginx/header/: proxy.conf
dev/conf/nginx/site/: 3ti.dev.conf
docker/dev/: README.md  build.sh  gen.sh  rm.sh  run.sh
docker/dev/_/etc/: profile
docker/dev/_/etc/profile.d/: rust.sh
docker/dev/_/etc/vim/: sysinit.vim
docker/mariadb/: Dockerfile
docker/nginx/: setup.sh
docker/nginx/nginx/: nginx.conf
docker/nginx/nginx/conf/: example.conf
docker/nginx/nginx/site/: example.conf
ops/: env.sh  ssl.sh
ops/backup/db/: dump.coffee  dump.sh  load.coffee
ops/cloudflare/: .envrc  env.sh  package.json
ops/ssl/: init.sh
ops/ssl/_/src/: index.coffee
ops/ssl/ali/: package.json  run.sh
ops/ssl/ali/src/: main.coffee
ops/ssl/doge/: run.sh
ops/ssl/doge/src/: main.coffee
ops/ubuntu/: README.md  chrony.sh  clone_run.sh  docker.sh  gfw.sh  init.sh  nginx.sh  rust.sh  upgrade.sh  zram.sh
ops/ubuntu/cargo_install/: must.sh
ops/ubuntu/cn/: lang.sh
rust/: .envrc  Cargo.toml  dev.sh  env.sh  example.url.nt  init.sh  package.json  pnpm-lock.yaml  redis.lua
rust/api/: Cargo.toml
rust/api/src/: main.rs
rust/lib/arg/: Cargo.toml
rust/lib/client/: Cargo.toml
rust/lib/client/src/: lib.rs
rust/lib/gid/: Cargo.toml
rust/lib/gid/src/: lib.rs
rust/lib/lang/src/: code_id.rs  lib.rs
rust/lib/m/: Cargo.toml
rust/lib/mark/: Cargo.toml
rust/lib/mysql_macro/: Cargo.toml
rust/lib/mysql_macro/src/: lib.rs
rust/lib/mysql_macro/tests/: main.rs
rust/lib/r/: Cargo.toml
rust/lib/r/src/: lib.rs
rust/lib/sk/: Cargo.toml
rust/lib/sk/src/: lib.rs
rust/lib/smtp/: Cargo.toml
rust/lib/smtp/src/: lib.rs
rust/lib/t3/: Cargo.toml
rust/lib/t3/src/: err.rs  host.rs  lib.rs  middleware.rs  msg.rs  origin.rs  srv.rs
rust/lib/time/: Cargo.toml
rust/lib/time/src/: lib.rs
rust/lib/tp/: Cargo.toml
rust/lib/tp/src/: lib.rs
rust/lib/trt/: Cargo.toml
rust/lib/ua/: Cargo.toml
rust/lib/user/: Cargo.toml
rust/lib/user/src/: cookie_set.rs  lib.rs  pipeline.rs
rust/lib/util/: Cargo.toml
rust/lib/xhash/: Cargo.toml
rust/lib/xkv/: Cargo.toml
rust/lib/xkv/src/: lib.rs
rust/mycron/: Cargo.toml
rust/mycron/src/: main.rs
rust/sh/: api.coffee  cron.coffee  gen.coffee  lua.coffee  rm_target_if_rustc_ver_change.coffee  upgrade.sh
