[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
t3 = { path = "../lib/t3" }
axum = "0.7.2"
rand = "0.8.5"
tokio = { version = "1.34.0", features = [
  "time",
  "rt-multi-thread",
  "macros",
  "rt"
] }
tracing = "0.1.40"
trt = "0.1.16"
r = { path = "../lib/r" }
client = { path = "../lib/client" }
exepid = { path = "../lib/exepid" }
const-str = "0.5.6"
url = { path = "./.url" }
