[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
t3 = { path = "../lib/t3" }
axum = "0.7.3"
rand = "0.8.5"
tokio = { version = "1.35.1", features = [
  "time",
  "rt-multi-thread",
  "macros",
  "rt"
] }
tracing = "0.1.40"
trt = "0.1.21"
r = { path = "../lib/r" }
exepid = { path = "../lib/exepid" }
const-str = "0.5.6"
url = { path = "./.url" }
set_header = "0.1.4"
re = "0.1.4"
