[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
t3 = { path = "../t3" }
axum = "0.7.2"
user = { path = "../user" }
tracing = "0.1.40"
thiserror = "1.0.50"
xtld = "0.1.1"
intbin = "0.1.2"
