[package]
name = "gid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
r = { path = "../../lib/r" }
time = { path = "../../lib/time" }
vb = "0.0.7"
paste = "1.0.14"
anyhow = "1.0.75"
ctor = "0.2.5"
trt = "0.1.15"
tokio = { version = "1.34.0", features = ["parking_lot"] }

[dev-dependencies]
tokio-test = "0.4.3"
