[package]
name = "mysql_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
mysql_async = { default-features = false, version = "0.33.0", features = [
  "minimal",
  "tracing",
  "derive"
] }
tokio = { version = "1.34.0", features = [
  "time",
  "rt-multi-thread",
  "macros",
  "rt"
] }
trt = "0.1.15"

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = [
  "time",
  "rt-multi-thread",
  "macros",
  "rt"
] }
tokio-test = "0.4.3"
