[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
mail-builder = "0.3.1"
mail-send = "0.4.1"
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
trt = "0.1.15"
