[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cookie = "0.18.0"
ub64 = { version = "0.0.10", features = ["u64", "u64li"] }
r = { path = "../r" }
gid = { path = "../gid" }
m = { path = "../m" }
sk = { path = "../sk" }
time = { path = "../time" }
anyhow = "1.0.75"
vb = "0.0.7"
tracing = "0.1.40"
intbin = "0.1.2"
cookiestr = "0.1.1"
kfn = { version = "0.1.0", path = "../kfn" }
const-str = "0.5.6"
xhash = { version = "0.1.0", path = "../xhash" }
ip = { path = "../ip", features = ["http"] }
ua = { path = "../ua" }
trt = { version = "0.1.15", path = "../trt" }
sonic-rs = "0.2.4"
